2014-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* isearch.el (isearch-filter-predicate): Documentation typo fix
	(bug#15474).

	* info-look.el (info-lookup-symbol): Document MODE (bug#15498).

	* isearch.el (isearch-cmds): Doc clarification (bug#15547).

	* replace.el (replace-match-maybe-edit): Doc clarification
	(bug#15632).

	* subr.el (add-to-list): Refill the paragraphs (bug#15791).

	* macros.el (insert-kbd-macro): Doc fix (bug#16025).

2014-02-08  Glenn Morris  <rgm@gnu.org>

	* help-fns.el (describe-variable):
	Check {file,dir}-local-variables-alist, and buffer-file-name,
	in the correct buffer.

2014-02-08  Ingo Lohmar  <i.lohmar@gmail.com>

	* help-fns.el (describe-variable): Fix the case where
	a value is directory-local with no dir-locals file.  (Bug#16635)

2014-02-08  Glenn Morris  <rgm@gnu.org>

	* abbrev.el (edit-abbrevs-mode):
	Derive from fundamental-mode.  (Bug#16682)

2014-02-07  Juanma Barranquero  <lekktu@gmail.com>

	* simple.el (quoted-insert): Check character validity (bug#16677).

2014-02-07  Juri Linkov  <juri@jurta.org>

	* desktop.el (desktop-read): Claim the lock when the owner is not
	the current process.  (Bug#16157)

2014-02-07  Juri Linkov  <juri@jurta.org>

	* desktop.el (desktop-buffers-not-to-save): Change default from nil
	to "\\` ".  (Bug#16651)

2014-02-07  Juri Linkov  <juri@jurta.org>

	* desktop.el (desktop-save-mode): Call `desktop-auto-save-set-timer'
	when enabling, and `desktop-auto-save-cancel-timer' when disabling.
	(desktop-auto-save-cancel-timer): New function with some code from
	`desktop-auto-save-set-timer'.
	(after-init-hook): Don't call `desktop-auto-save-set-timer'.
	Instead of setting `desktop-save-mode' to nil, call
	`desktop-save-mode' with arg 0.  (Bug#16630)

2014-02-07  Glenn Morris  <rgm@gnu.org>

	* hi-lock.el (hi-lock-auto-select-face, hi-lock-line-face-buffer)
	(hi-lock-face-buffer, hi-lock-face-phrase-buffer)
	(hi-lock-face-symbol-at-point, hi-lock-read-face-name): Doc tweaks.
